common/common.scss
 .iconic-user-fields {
  a {
      margin-right: 5px;
  }
  .fa {
      font-size: 1.2em;
      color: #000;
      margin-left: 0;
  }
  .fa.d-icon.svg-icon.svg-string {
      margin: 0px;
  }
}

.primary-textual h3 > .ember-view:not(:first-child) {
  margin-left: 10px;
}


#user-card {
  .card-content {
      padding-top: 31px;
  }
  .usercard-controls {
      margin-top: -19px;
  }
  &.no-bg .card-content {
      padding-top: 12px;
      margin-top: 19px;
  }
  span.ember-view {
      position: relative !important;
  }
}

